@@ -5,6 +5,13 @@
 	  src/z80/main.c,
 	  src/z80/peep.c:
 	  Infrastructure for non-__z88dk_fastcall register arguments.
+	* src/stm8/gen.c:
+	  Fix bug #3233.
+	* src/SDCCast.c,
+	  src/SDCCopt.c,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h:
+	  Fix handling of register parameters of not-really-builtin memcpy.
 
 2021-05-11 Philipp Klaus Krause <pkk AT spth.de>
 
